getting some basic formatting going

--- a/index.html
+++ b/index.html
@@ -11,15 +11,20 @@
     <title>No, the Public Square Jersey Barriers are not gone yet.</title>
   </head>
   <body>
-    <h2>Are the Public Square Jersey Barriers gone yet?</h2>
-    <h1>Nope!</h1>
-    
-    <div class="container-fluid">
-      <div>
+    <div class="container-fluid text-center vh-100">
+
+      <div class="row h-50 align-middle">
+        <h2 class="align-self-center">Are the Cleveland Public Square Jersey Barriers gone yet?</h2>
+        <h1 class="align-self-center">No.</h1>
+      </div>
+
+      <div class="row h-50 align-middle" >
         <iframe width="560" height="315" src="https://www.youtube.com/embed/9L7EhGU_YY4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
     </div>
-    
+    <footer>
+    </footer>
+
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
