--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <title>No, the Public Square Jersey Barriers are not gone yet.</title>
+    <link rel="shortcut icon" type="image/jpg" href="favicon.ico"/>
+
+
     <style>
       body {
         font-family: 'Courier New', monospace;
