--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <title>No, the Public Square Jersey Barriers are not gone yet.</title>
-    <link rel="shortcut icon" type="image/jpg" href="favicon.ico"/>
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
 
 
     <style>
@@ -22,6 +25,11 @@
       h1 {
         font-weight: bold;
       }
+
+      .update {
+        color: red;
+      }
+
       @media only screen and (max-width: 600px) {
         ul {
           list-style-type: circle;
@@ -42,6 +50,13 @@
       </div>
 
       <div class="row align-middle">
+        <div class="col-12 update">
+          <h2>Update 3/4/2022!</h2>
+          <a href="https://mayor.clevelandohio.gov/mayor-justin-m-bibb-introduces-legislation-remove-jersey-barriers-public-square">Mayor Justin M. Bibb Introduces Legislation to Remove Jersey Barriers in Public Square</a></li>
+        </div>
+      </div>
+
+      <div class="row align-middle">
         <div class="col-lg-4 col-md-1"></div>
         <div class="col-lg-4 col-md-10 pt-5 pb-5">
           <div class="ratio ratio-16x9">
@@ -50,6 +65,7 @@
         </div>
         <div class="col-lg-4 col-md-1"></div>
       </div>
+
 
       <div class="row align-middle">
         <div class="col-12">
