--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <title>No, the Public Square Jersey Barriers are not gone yet.</title>
+    <title>YES, the Public Square Jersey Barriers are finally gone!</title>
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -46,12 +46,16 @@
     <div class="container-fluid text-center">
       <div class="row align-middle">
         <h2 class="align-self-center">Are the Cleveland Public Square Jersey Barriers gone yet?</h2>
-        <h1 class="align-self-center">No.</h1>
+        <h1 class="align-self-center">YES!</h1>
       </div>
 
       <div class="row align-middle">
         <div class="col-12 update">
-          <h2>Update 3/4/2022!</h2>
+          <h2>Update 3/25/2024</h2>
+          <a href="https://twitter.com/CityofCleveland/status/1772319298226184610">The moment everybody has been waiting for! The first barrier is lifted away!</a>
+        </div>
+        <div class="col-12">
+          <p>Update 3/4/2022</p>
           <a href="https://mayor.clevelandohio.gov/mayor-justin-m-bibb-introduces-legislation-remove-jersey-barriers-public-square">Mayor Justin M. Bibb Introduces Legislation to Remove Jersey Barriers in Public Square</a></li>
         </div>
       </div>
